--- a/src/index.jade
+++ b/src/index.jade
@@ -23,9 +23,9 @@ html
             x-gif(src="images/disney_intro_tron.gif" fill stopped ping-pong speed="1")
         .content#intro
             .box
-                h2: small OneID Bundler & CDN
+                h2: small New Relic in the Enterprise
                 .mid by
-                h4: small Adam Eivy <span class="rotate">\[._.]/</span>
+                h4: small Peter Simkins <span class="rotate">\[._.]/</span>
                     .me.center
                 br
                 audio#audio(controls,loop)
@@ -36,12 +36,12 @@ html
         .fullscreen
           x-gif(src="images/mickey_dance.gif" fill stopped speed=0.8 n-times=3)
         .content.wait-for-gif.darken
-          h1 everything's fine
+          h1 temp
 
       section.content
-        h2 ESPN Numbers
+        h2 tem
         h3: code.language-bash.
-          Peak: 157,000 Page Loads Per Second
+          more temp
         h3.grow ¯\_(ツ)_/¯
 
       section
@@ -49,21 +49,21 @@ html
           x-gif(src="images/eraserhead.gif" fill stopped)
 
       section.content
-        h3 Page Loads...
+        h3 interesting temp
         h4: small: code.language-bash.
-          TPS = Page Loads * (Page Assets + API Requests)
+          More temp...
         h3 \[o_9]/
-        h2 ~1 Million TPS Peak
+        h2 placeholder
 
       section.content
-        h2 OneID UI
+        h2 more
         ul
-          li DisneyID.js (outer JS)
-          li HTML
-          li JavaScript Library (inner)
-          li CSS (Base + Client Override)
-          li Localization text
-          li Client Site Config
+          li blaah
+          li blaah
+          li blaah
+          li blaah
+          li blaah
+          li blaah
 
       section.content
         h3 We can just scale the servers
@@ -73,31 +73,31 @@ html
         .fullscreen
           x-gif(src="images/laugh_donald.gif" fill stopped n-times=1)
         .content.wait-for-gif.darken
-          h1 $$$
+          h1 blaah
 
       section.content
         ul
             li
               b.alert.alert-info NewRelic
-              | &nbsp; ~86 Billion/Day  &nbsp;
-              b.alert.alert-danger.rotate $112K/day
+              | &nbsp; blaah &nbsp;
+              b.alert.alert-danger.rotate blaah
             li
-              b.alert.alert-info Site Config
-              | &nbsp; 350 GCv2 servers &nbsp;
-              b.alert.alert-danger.rotate $82K/month
+              b.alert.alert-info blaah
+              | &nbsp; blaah &nbsp;
+              b.alert.alert-danger.rotate blaah
 
       section.fullscreen
         x-gif(src="images/no.gif" fill stopped)
 
       section.content
-        h3 CDN Cache
+        h3 blaah
         h4: code.language-bash.
-          This is all static, public, cachable
+          blaah
         h3 \[^_^]/
 
       section.content
-        h3 What About the User?
-        h4 HTTP/1.1 requests are heavy
+        h3 blaah
+        h4 blaah
 
       section.content
           h1 HTTP/2
@@ -117,7 +117,7 @@ html
 
       section.content
         h2 Is that big?
-        h4: code.language-css ~180KB (depending on client)
+        h4: code.language-css blaah
 
 
       section.content
@@ -132,18 +132,18 @@ html
       section.content
         h2 \(• ◡ •)/ Added Benefits
         ul
-            li No more delay in CSS override
-            li No more l10n fillers
+            li blaah
+            li blaah
 
       section.fullscreen
         x-gif(src="images/perfect_x-wings.gif" fill stopped)
 
       section.content
-        h2 Live Traffic Results
+        h2 blaah
         ul
-            li Akamai offloading 99.8% (13.3 TB/day)
-            li IE9 traffic (1%) is still 2.28 Million hits/day
-            li A few bumps...
+            li blaah
+            li blaah
+            li blaah
 
       section.fullscreen
         img(src="images/akamai_offload.png")
@@ -152,7 +152,7 @@ html
         img(src="images/non_cdn.png")
         .content
           .box
-            h4 (use the CDN)
+            h4 blaah
 
       section.fullscreen
         img.fillh(src="images/newrelic_good.png")
@@ -176,15 +176,7 @@ html
             .mid Thanks!
             .line
               .me.center
-            h4 \[._.]/ Adam Eivy
-            h6 slides:
-              a(href='http://bit.ly/disney_bundler') &nbsp; bit.ly/disney_bundler
-            h6 docs:
-              a(href='http://bit.ly/disney_bundlerdocs') &nbsp; bit.ly/disney_bundlerdocs
-            h6 cost:
-              a(href='http://bit.ly/disney_cdncost') &nbsp; bit.ly/disney_cdncost
-            h6 NewRelic Logs:
-              a(href='http://bit.ly/disney_nr_bundler') &nbsp; bit.ly/disney_nr_bundler
+            h4 \[._.]/ Peter Simkins
             small: a(href='#1') &nbsp; restart
 
     script(src='scripts/scripts.js')
